# openplotva

./: .dockerignore  .env.example  .gitignore  .pr_agent.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  SECURITY.md  compose.yml  dangerfile.js  deny.toml
.github/: FUNDING.yml
.github/scripts/: run_pr_agent_pair.py
.github/workflows/: ci.yml  deploy-production.yml  pr-automation.yml  rust-deep.yml  security.yml
crates/openplotva-agent/: Cargo.toml
crates/openplotva-agent/src/: lib.rs
crates/openplotva-app/: Cargo.toml
crates/openplotva-app/src/: activity.rs  admin.rs  agent_jobs.rs  agent_runtime.rs  asr.rs  callbacks.rs  checkin.rs  control_jobs.rs  delete_drawing.rs  delete_lyrics.rs  delete_message.rs  diagnostics.rs  dialog_context.rs  dialog_debounce.rs  dialog_jobs.rs  dialog_messages.rs  dialog_runtime.rs  dialog_tools.rs  dialog_workers.rs  edited.rs  embedder.rs  guest.rs  help.rs  history_summary.rs  image_jobs.rs  ingestion_telemetry.rs  inline.rs  lib.rs  main.rs  media.rs  members.rs  memory_runtime.rs  message_gate.rs  model_routing.rs  music_jobs.rs  openrouter_free_pool.rs  payments.rs  pending_ops.rs  permissions.rs  rate_limits.rs  (+39 more)
crates/openplotva-app/src/dialog_jobs/: answer.rs  effects.rs  input.rs  mod.rs  queue.rs  report.rs  retry.rs  tests.rs  worker.rs
crates/openplotva-app/src/dialog_turn/: budget.rs  engine.rs  inbox.rs  ledger.rs  mod.rs  obligations.rs  outcome.rs  session.rs  signal.rs
crates/openplotva-config/: Cargo.toml
crates/openplotva-config/src/: lib.rs
crates/openplotva-core/: Cargo.toml
crates/openplotva-core/src/: lib.rs
crates/openplotva-dialog/: Cargo.toml
crates/openplotva-dialog/src/: dispatch.rs  history.rs  json_codec.rs  lib.rs  persona.rs  tool_telemetry.rs  transcript.rs  turn.rs
crates/openplotva-history/: Cargo.toml
crates/openplotva-history/src/: lib.rs
crates/openplotva-llm/: Cargo.toml
crates/openplotva-llm/src/: aifarm.rs  gemini.rs  lib.rs  model_listing.rs  provider_schema.rs  retry.rs  trace.rs  whitecircle.rs
crates/openplotva-llm/src/router/: breaker.rs  capacity.rs  handle.rs  mod.rs  policy.rs  table.rs  triggers.rs
crates/openplotva-media/: Cargo.toml
crates/openplotva-media/src/: acestep.rs  aihorde.rs  lib.rs  modelscope.rs  pruna.rs  together.rs  uploader.rs
crates/openplotva-memory/: Cargo.toml
crates/openplotva-memory/src/: lib.rs
crates/openplotva-observability/: Cargo.toml
crates/openplotva-observability/src/: lib.rs  secrets.rs
crates/openplotva-prompts/: Cargo.toml
crates/openplotva-prompts/src/: lib.rs
crates/openplotva-server/: Cargo.toml
crates/openplotva-server/src/: lib.rs  runtime_graphql.rs
crates/openplotva-shield/: Cargo.toml
crates/openplotva-shield/src/: lib.rs
crates/openplotva-storage/: Cargo.toml
crates/openplotva-storage/src/: lib.rs  llm_routing.rs  telegram_delivery.rs  telegram_outbox.rs  telegram_projection.rs
crates/openplotva-taskman/: Cargo.toml
crates/openplotva-taskman/src/: lib.rs
crates/openplotva-telegram/: Cargo.toml
crates/openplotva-telegram/src/: callback.rs  dedup.rs  dispatcher.rs  html.rs  lib.rs  outbound.rs  pending_ops.rs  persistence.rs  rate_limit.rs  rich_api.rs  rich_html.rs  stars.rs  transport.rs  update_startup.rs
crates/openplotva-updates/: Cargo.toml
crates/openplotva-updates/src/: lib.rs  redis_stream.rs
crates/openplotva-web/: Cargo.toml
crates/openplotva-web/src/: lib.rs
deploy/production/: compose.production.yml  deploy-production.sh
docs/: CODEBASE_MAP.md  admin-ux-audit.md  settings-webapp-auth-design.md
migrations/: 0_init.down.sql  0_init.up.sql  100_memory_pipeline.down.sql  100_memory_pipeline.up.sql  101_fix_memory_run_attempt_timestamps.down.sql  101_fix_memory_run_attempt_timestamps.up.sql  102_chat_history_partition_helpers.down.sql  102_chat_history_partition_helpers.up.sql  103_shield_documents.down.sql  103_shield_documents.up.sql  104_tune_shield_retrieval.down.sql  104_tune_shield_retrieval.up.sql  105_reduce_shield_title_overlap.down.sql  105_reduce_shield_title_overlap.up.sql  106_add_shield_violence_kill_fallback.down.sql  106_add_shield_violence_kill_fallback.up.sql  107_enable_daily_game_for_all_chats.down.sql  107_enable_daily_game_for_all_chats.up.sql  108_memory_run_error_log_and_retry_cap.down.sql  108_memory_run_error_log_and_retry_cap.up.sql  109_backfill_memory_run_error_log.down.sql  109_backfill_memory_run_error_log.up.sql  10_daily_game.down.sql  10_daily_game.up.sql  110_query_performance_indexes.down.sql  110_query_performance_indexes.up.sql  111_query_performance_chats_first_name_trgm.down.sql  111_query_performance_chats_first_name_trgm.up.sql  112_query_performance_chats_last_name_trgm.down.sql  112_query_performance_chats_last_name_trgm.up.sql  113_query_performance_memory_runs_processing_order.down.sql  113_query_performance_memory_runs_processing_order.up.sql  114_query_performance_memory_runs_failed_order.down.sql  114_query_performance_memory_runs_failed_order.up.sql  115_query_performance_memory_runs_queued_order.down.sql  115_query_performance_memory_runs_queued_order.up.sql  116_query_performance_memory_runs_range_start.down.sql  116_query_performance_memory_runs_range_start.up.sql  117_query_performance_admin_indexes.down.sql  117_query_performance_admin_indexes.up.sql  (+189 more)
plans/: 001-ci-run-tests-and-clippy.md  002-sign-admin-session-cookie.md  003-postgres-pool-timeouts.md  004-ingress-guard-fail-closed.md  005-bound-enqueue-error-vec.md  006-constant-time-telegram-hmac.md  007-admin-auth-date-freshness.md  008-bump-sqlx-to-stable.md  009-settings-webapp-auth-spike.md  010-settings-webapp-initdata-auth.md  011-fix-preexisting-test-failures.md  README.md
tools/: container-smoke.sh  db-reclaim.sh  live-update-injection-smoke.sh  local-smoke.sh  provider-smoke.sh  reviewdog-cargo-diagnostics.jq  rust-deep-gate.sh  rust-dependency-gate.sh  rust-fast-gate.sh  rust-sast-gate.sh  service-smoke.sh  service-smoke.web-ui.spec.js  strict-live-preflight.sh  update-queue-smoke.sh  uploader-retention.cron
(+66 files in other folders)
