[package]
name = "openplotva-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
openplotva-config = { path = "../openplotva-config" }
openplotva-core = { path = "../openplotva-core" }
openplotva-observability = { path = "../openplotva-observability" }
openplotva-server = { path = "../openplotva-server" }
openplotva-storage = { path = "../openplotva-storage" }
openplotva-telegram = { path = "../openplotva-telegram" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing.workspace = true

[lints]
workspace = true
