[package]
name = "openplotva-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
dotenvy.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[lints]
workspace = true
