[package]
name = "openplotva-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time.workspace = true

[lints]
workspace = true
