[package]
name = "openplotva-history"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
openplotva-core = { path = "../openplotva-core" }
openplotva-dialog = { path = "../openplotva-dialog" }
hex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
time = { workspace = true, features = ["formatting", "parsing", "serde"] }
