[package]
name = "openplotva-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
openplotva-config = { path = "../openplotva-config" }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[lints]
workspace = true

