[package]
name = "openplotva-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
async-graphql.workspace = true
axum.workspace = true
openplotva-core = { path = "../openplotva-core" }
rustls.workspace = true
rustls-pki-types.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["net", "time"] }
tokio-rustls.workspace = true
tracing.workspace = true

[dev-dependencies]
hex.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
