[package]
name = "openplotva-shield"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
sha2.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["serde"] }

[lints]
workspace = true
