[package]
name = "openplotva-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
openplotva-config = { path = "../openplotva-config" }
openplotva-core = { path = "../openplotva-core" }
redis = { workspace = true, features = ["tokio-comp"] }
sqlx = { workspace = true, features = ["migrate", "postgres", "runtime-tokio", "time"] }
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
