[package]
name = "openplotva-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
openplotva-config = { path = "../openplotva-config" }
openplotva-core = { path = "../openplotva-core" }
openplotva-history = { path = "../openplotva-history" }
openplotva-memory = { path = "../openplotva-memory" }
openplotva-shield = { path = "../openplotva-shield" }
openplotva-taskman = { path = "../openplotva-taskman" }
aes-gcm.workspace = true
hex.workspace = true
pgvector.workspace = true
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["macros", "migrate", "postgres", "runtime-tokio", "time"] }
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
