[package]
name = "openplotva-taskman"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
time = { workspace = true, features = ["serde"] }

[dev-dependencies]
serde_json.workspace = true
