[package]
name = "openplotva-telegram"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
base64.workspace = true
carapax.workspace = true
crc.workspace = true
html5ever.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["formatting", "parsing"] }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
url.workspace = true

[dev-dependencies]

[lints]
workspace = true
