[package]
name = "openplotva-telegram"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
base64.workspace = true
carapax.workspace = true
crc.workspace = true
html-escape.workspace = true
html5ever.workspace = true
openplotva-updates = { path = "../openplotva-updates" }
redis = { workspace = true, features = ["tokio-comp"] }
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha1.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["formatting", "parsing"] }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]

[lints]
workspace = true
